kubernetes/apps/default/homepage/app/route.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/route.openshift.io/route_v1.json
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: homepage
  labels:
    ingress: grappleberry
spec:
  host: home.grappleberry.xyz
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: homepage
    weight: 100
  wildcardPolicy: None
